[package]
name = "heartbeat-acquisition"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
serde = "1.0.195"
serde_derive = "1.0.195"
serialport = "4.3.0"
toml = "0.8.8"
uuid = { version = "1.7.0", features = ["v4"] }