[package]
name = "heartbeat-acquisition"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
futures = { version = "0.3.30", features = ["executor"] }
log = "0.4.20"
prometheus-client = "0.22.0"
rocket = "0.5.0"
serde = "1.0.195"
serde_derive = "1.0.195"
serialport = "4.3.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
toml = "0.8.8"
uuid = { version = "1.7.0", features = ["v4"] }
ctrlc = "3.4.2"
actix-rt = "2.9.0"
tokio-util = "0.7.10"
fern = "0.6.2"
humantime = "2.1.0"
colored = "2.1.0"
chrono = "0.4.33"
minio = "0.1.0"
