[package]
name = "heartbeat-acquisition"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.30", features = ["executor"] }
log = "0.4.20"
prometheus-client = "0.22.0"
serde = "1.0.195"
serde_derive = "1.0.195"
serialport = "4.3.0"
tokio = { version = "1.36.0", features = ["full"] }
warp = "0.3"
toml = "0.8.8"
uuid = { version = "1.7.0", features = ["v4"] }
ctrlc = "3.4.2"
actix-rt = "2.9.0"
tokio-util = "0.7.10"
fern = "0.6.2"
humantime = "2.1.0"
colored = "2.1.0"
chrono = "0.4.34"
minio = { git = "https://github.com/marisusis/minio-rs", branch = "fix-1" }
atoi = "2.0.0"
axum = "0.7.4"
serde_json = "1.0.113"
signal-hook = "0.3.17"
anyhow = "1.0.79"
url = "2.5.0"
tower-http = { version = "0.5.2", features = ["cors"] }
hdf5 = "0.8.1"
hdf5-sys = { version = "0.8.1", features = ["static"] }

[target.'cfg(target_os = "linux")'.dependencies]
rppal = "0.17.1"
embedded-hal = "1.0.0"
